<resources>
    <string name="app_name">movie-application-eren-karaboga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre_name">GenreName</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="search_movie">Search Movie</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Upcoming</string>
    <string name="welcome">Welcome</string>
    <string name="see_more">See More</string>
</resources>