<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/luna"
    android:orientation="vertical"
    tools:context=".presentation.movie.MovieFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/welcome"
        android:textColor="@color/servet"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/TvPopular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IvSearch"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/TvPopular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/TvPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/popular_movies"
        android:textAlignment="center"
        android:textColor="@color/servet"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewPopular"
        app:layout_constraintTop_toTopOf="@id/recyclerviewPopular" />

    <TextView
        android:id="@+id/TvPopularMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/see_more"
        android:textColor="@color/star_orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/TvPopular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TvPopular" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvPopular" />

    <TextView
        android:id="@+id/TvTopRated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/top_rated"
        android:textColor="@color/servet"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewPopular"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/TvTopRatedMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/see_more"
        android:textColor="@color/star_orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/TvTopRated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TvTopRated" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewMost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerviewPopular" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/up_coming"
        android:textColor="@color/servet"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewMost" />

    <TextView
        android:id="@+id/TvUpComingMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/droid_bold"
        android:text="@string/see_more"
        android:textColor="@color/star_orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewUpcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerviewMost" />
</androidx.constraintlayout.widget.ConstraintLayout>