<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackroundColor"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackroundColor"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="230dp"
                    android:layout_height="345dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/posterIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/cardBorderColor"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/cardBackroundColor"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingTop="20dp"
                                android:src="@drawable/ic_language">

                            </ImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/feral_bold"
                                android:text="@string/language"
                                android:textAlignment="center"
                                android:textColor="@color/movieDetailTextColor" />

                            <TextView
                                android:id="@+id/genreTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/feral_bold"
                                android:textAlignment="center"
                                android:textColor="@color/white">

                            </TextView>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/durationIv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/cardBorderColor"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/cardBackroundColor"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingTop="20dp"
                                android:src="@drawable/ic_clock_filled" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/feral_bold"
                                android:text="@string/release"
                                android:textAlignment="center"
                                android:textColor="@color/movieDetailTextColor" />

                            <TextView
                                android:id="@+id/durationTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/feral_bold"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="12sp">

                            </TextView>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ratingIv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/cardBorderColor"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/cardBackroundColor"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingTop="20dp"
                                android:src="@drawable/ic_star" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/feral_bold"
                                android:text="@string/rating"
                                android:textAlignment="center"
                                android:textColor="@color/movieDetailTextColor" />

                            <TextView
                                android:id="@+id/ratingTv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/feral_bold"
                                android:textAlignment="center"
                                android:textColor="@color/ratingTextColor">

                            </TextView>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/movieNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/feral_bold"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/movieDescTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/feral_light"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
